--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;900&display=swap"
     rel="stylesheet">
 
+  <!-- Vendor CSS Files -->
+  <link href="/src/assets/vendor/animate.css/" rel="stylesheet">
+  <link href="/src/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="/src/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="/src/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+
   <title>EasyLend</title>
 </head>
 
