--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
   <link href="/src/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
   <link href="/src/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
-  <title>EasyLend</title>
+  <title>Urban Housing</title>
+
+  <!-- Favicons -->
+  <link href="/src/assets/img/favicon.png" rel="icon">
+  <link href="/src/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+
 </head>
 
 <body>
