--- a/index.html
+++ b/index.html
@@ -22,7 +22,51 @@
   <!-- Favicons -->
   <link href="/src/assets/img/favicon.png" rel="icon">
   <link href="/src/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <style>
+     ::-webkit-scrollbar {
+      width: 12px;
+      /* Width of the scrollbar */
+      height: 12px;
+      /* Height of the scrollbar (for horizontal scrollbars) */
+    }
 
+    ::-webkit-scrollbar-thumb {
+      background: #5a287d;
+      /* Color of the scrollbar thumb */
+      border-radius: 10px;
+      /* Roundness of the scrollbar thumb */
+      border: 2px solid transparent;
+      /* Adds space around the scrollbar thumb */
+      background-clip: content-box;
+      /* Ensures the background is clipped */
+    }
+
+    ::-webkit-scrollbar-thumb:hover {
+      background: #5a287d;
+      /* Color of the scrollbar thumb when hovered */
+    }
+
+    ::-webkit-scrollbar-track {
+      background: #f1f1f1;
+      /* Color of the scrollbar track */
+      border-radius: 10px;
+      /* Roundness of the scrollbar track */
+    }
+
+    /* For Firefox */
+    * {
+      scrollbar-width: thin;
+      /* Thin scrollbar */
+      scrollbar-color: #6c6678 #f1f1f1;
+      /* Thumb color and track color */
+    }
+
+    /* For Internet Explorer and Edge */
+    body {
+      -ms-overflow-style: -ms-autohiding-scrollbar;
+      /* Auto-hiding scrollbar */
+    }
+  </style>
 </head>
 
 <body>
