--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="/src/assets/vendor/animate.css/" rel="stylesheet">
+  <link href="/src/assets/vendor/animate.css" rel="stylesheet">
   <link href="/src/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="/src/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
   <link href="/src/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
